PLFM-9196: Add integration test